--- a/app/src/main/res/layout/listview_imagenes.xml
+++ b/app/src/main/res/layout/listview_imagenes.xml
@@ -17,7 +17,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/lblTitulo"
+        android:id="@+id/lblnombreP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="80dp"
@@ -30,7 +30,7 @@
         android:id="@+id/lbldescrip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/lblTitulo"
+        android:layout_below="@id/lblnombreP"
         android:layout_marginLeft="80dp"
         android:layout_marginTop="5dp"
         android:text="Descripcion"
