--- a/app/src/main/res/layout/activity_agregar_usuario.xml
+++ b/app/src/main/res/layout/activity_agregar_usuario.xml
@@ -31,7 +31,7 @@
                 android:hint="Apellidos" />
 
             <TextView
-                android:id="@+id/txtdireccion"
+                android:id="@+id/txtdirecciongps"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/txtnombres"
