--- a/app/src/main/res/layout/activity_agregar_usuario.xml
+++ b/app/src/main/res/layout/activity_agregar_usuario.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ScrollView
         android:layout_width="match_parent"
@@ -75,7 +77,8 @@
                 android:layout_below="@id/txtcontra"
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
-                android:text="Guardar registro" />
+                android:text="Guardar registro"
+                app:backgroundTint="#FF5722" />
 
             <Button
                 android:id="@+id/btngps"
@@ -84,7 +87,8 @@
                 android:layout_below="@id/btnguardar"
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
-                android:text="Obtener ubicacion" />
+                android:text="Obtener ubicacion"
+                app:backgroundTint="#FF5722" />
 
         </LinearLayout>
     </ScrollView>
@@ -93,10 +97,14 @@
         android:id="@+id/btnregresar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="25dp"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="right"
-        android:src="@drawable/abc_vector_test" />
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="25dp"
+        android:src="@drawable/abc_vector_test"
+        app:backgroundTint="#FF5722" />
 
 </RelativeLayout>
