--- a/app/src/main/res/layout/activity_agregar_usuario.xml
+++ b/app/src/main/res/layout/activity_agregar_usuario.xml
@@ -67,6 +67,7 @@
                 android:layout_below="@id/txtcorreo"
                 android:layout_gravity="center"
                 android:layout_margin="15dp"
+                android:inputType="textPassword"
                 android:hint="Contraseña" />
 
 
